--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,8 @@
   --grey-color-icon: #afb1b8;
   --white-color-icon: #ffffff;
   --hover-color-icon: #2196f3;
+  --rgba-bg-color: rgba(47, 48, 58, 0.8);
+  --modal-bg-color: rgba(0, 0, 0, 0.2);
 }
 
 body {
@@ -172,6 +174,21 @@ ul {
   margin-right: 10px;
 }
 
+.navigation {
+  position: relative;
+}
+
+.navigation .current::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+}
+
 /* hero */
 
 .hero {
@@ -224,6 +241,45 @@ ul {
 .hero .button:hover,
 .hero .button:focus {
   background-color: var(--button-hover);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--modal-bg-color);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.button-modal {
+  display: block;
+  height: 30px;
+  width: 30px;
+  background-color: #ccc;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: 8px;
+  margin-top: 8px;
 }
 
 /* Наші особливості */
@@ -286,6 +342,27 @@ ul {
 
 .work {
   padding-top: 47px;
+}
+.work-card {
+  position: relative;
+}
+.work-text {
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  bottom: 0;
+  right: 0;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: var(--white-text-color);
+  background: var(--rgba-bg-color);
+  padding-top: 27px;
+  padding-bottom: 27px;
 }
 
 /* Наша команда */
@@ -547,10 +624,29 @@ ul {
 }
 .link-card {
   display: block;
+  position: relative;
 }
 
 .link-card:hover,
 .link-card:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.modal-card {
+  position: absolute;
+  width: 370px;
+  height: 294px;
+  left: 0;
+  top: 0;
+  background: rgba(33, 150, 243, 0.9);
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--white-text-color);
+  padding: 63px 24px;
+  opacity: 0;
+}
+
+.link-card:hover .modal-card {
+  opacity: 1;
 }
