--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ ul {
 .navigation .current::after {
   content: '';
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
