--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,7 @@
   --hover-color-icon: #2196f3;
   --rgba-bg-color: rgba(47, 48, 58, 0.8);
   --modal-bg-color: rgba(0, 0, 0, 0.2);
+  --cubic-brizer: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -108,6 +109,9 @@ ul {
   color: var(--primary-text-color);
 }
 
+.list .link {
+}
+
 .list .link:hover,
 .list .link:focus {
   color: var(--accent-text-color);
@@ -149,6 +153,7 @@ ul {
 .navigation .link {
   display: flex;
   align-items: center;
+  transition: color 250ms var(--cubic-brizer);
 }
 
 .site-nav .navigation + .navigation {
@@ -236,50 +241,13 @@ ul {
 
   padding: 10px 32px;
   margin-top: 30px;
+
+  transition: background-color 250ms var(--cubic-brizer);
 }
 
 .hero .button:hover,
 .hero .button:focus {
   background-color: var(--button-hover);
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--modal-bg-color);
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.modal {
-  position: absolute;
-  width: 528px;
-  height: 581px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-}
-
-.button-modal {
-  display: block;
-  height: 30px;
-  width: 30px;
-  background-color: #ccc;
-  border-radius: 50%;
-  margin-left: auto;
-  margin-right: 8px;
-  margin-top: 8px;
 }
 
 /* Наші особливості */
@@ -429,6 +397,8 @@ ul {
   border-radius: 50%;
 
   fill: var(--grey-color-icon);
+
+  transition: background-color 250ms var(--cubic-brizer);
 }
 
 .social-link:hover,
@@ -459,12 +429,12 @@ ul {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: var(--grey-color-icon);
+  transition: border 250ms var(--cubic-brizer), color 250ms var(--cubic-brizer);
 }
 
 .icon-client:hover,
 .icon-client:focus {
   border: 1px solid #2196f3;
-  border-radius: 4px;
 }
 
 .client-icon {
@@ -489,6 +459,7 @@ ul {
   font-style: normal;
   font-size: 14px;
   line-height: 1.7;
+  transition: color 250ms var(--cubic-brizer);
 }
 
 .address {
@@ -551,6 +522,7 @@ ul {
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.1);
   fill: var(--white-color-icon);
+  transition: background-color 250ms var(--cubic-brizer);
 }
 
 .link-social-footer:hover,
@@ -575,6 +547,7 @@ ul {
   border-color: transparent;
   padding: 6px 25px;
   border-radius: 4px;
+  transition: background-color 250ms var(--cubic-brizer);
 }
 
 .portfolio .button:hover,
@@ -624,29 +597,90 @@ ul {
 }
 .link-card {
   display: block;
-  position: relative;
 }
 
 .link-card:hover,
 .link-card:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+  opacity: 1;
+}
+
+.overlay-card {
+  position: relative;
+  overflow: hidden;
 }
 
 .modal-card {
   position: absolute;
-  width: 370px;
-  height: 294px;
+  width: 100%;
+  height: 100%;
   left: 0;
   top: 0;
+
   background: rgba(33, 150, 243, 0.9);
   font-size: 18px;
   line-height: 1.56;
   color: var(--white-text-color);
   padding: 63px 24px;
-  opacity: 0;
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-card:hover .modal-card {
-  opacity: 1;
+.list-card:hover .modal-card {
+  transform: translateY(0);
+}
+
+/* modal */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--modal-bg-color);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.button-modal {
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  height: 30px;
+  width: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--white-bg-color);
+
+  cursor: pointer;
+  position: relative;
+}
+
+.icon-close-modal {
+  fill: var(--black-text-color);
+}
+
+.icon-close-modal:hover,
+.icon-close-modal:focus {
+  fill: var(--accent-text-color);
 }
