--- a/css/styles.css
+++ b/css/styles.css
@@ -665,19 +665,18 @@ ul {
 .button-modal {
   position: absolute;
   top: 8px;
-  left: 8px;
-  height: 30px;
-  width: 30px;
+  right: 8px;
+  background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
-  background-color: var(--white-bg-color);
-
   cursor: pointer;
-  position: relative;
 }
 
 .icon-close-modal {
   fill: var(--black-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-close-modal:hover,
