--- a/css/styles.css
+++ b/css/styles.css
@@ -625,7 +625,7 @@ ul {
   padding: 63px 24px;
 
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms var(--cubic-brizer);
 }
 
 .list-card:hover .modal-card {
@@ -641,11 +641,17 @@ ul {
   width: 100%;
   height: 100%;
   background-color: var(--modal-bg-color);
+  opacity: 1;
+  transition: opacity 250ms var(--cubic-brizer);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
 }
 
 .modal {
@@ -654,7 +660,8 @@ ul {
   height: 581px;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms var(--cubic-brizer);
 
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -676,7 +683,7 @@ ul {
 
 .icon-close-modal {
   fill: var(--black-text-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms var(--cubic-brizer);
 }
 
 .icon-close-modal:hover,
