--- a/css/styles.css
+++ b/css/styles.css
@@ -398,7 +398,7 @@ ul {
 
   fill: var(--grey-color-icon);
 
-  transition: background-color 250ms var(--cubic-brizer);
+  transition: background-color 250ms var(--cubic-brizer), fill 250ms var(--cubic-brizer);
 }
 
 .social-link:hover,
@@ -429,12 +429,12 @@ ul {
   border: 1px solid #afb1b8;
   border-radius: 4px;
   color: var(--grey-color-icon);
-  transition: border 250ms var(--cubic-brizer), color 250ms var(--cubic-brizer);
+  transition: border-color 250ms var(--cubic-brizer), color 250ms var(--cubic-brizer);
 }
 
 .icon-client:hover,
 .icon-client:focus {
-  border: 1px solid #2196f3;
+  border-color: var(--accent-text-color);
 }
 
 .client-icon {
@@ -547,7 +547,8 @@ ul {
   border-color: transparent;
   padding: 6px 25px;
   border-radius: 4px;
-  transition: background-color 250ms var(--cubic-brizer);
+  transition: background-color 250ms var(--cubic-brizer), color 250ms var(--cubic-brizer),
+    box-shadow 250ms var(--cubic-brizer);
 }
 
 .portfolio .button:hover,
@@ -597,13 +598,13 @@ ul {
 }
 .link-card {
   display: block;
+  transition: box-shadow 250ms var(--cubic-brizer);
 }
 
 .link-card:hover,
 .link-card:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-  opacity: 1;
 }
 
 .overlay-card {
